<?xml version="1.0"?>
<package format="3">
  <name>var_fwt_randomalert</name>
  <version>0.0.0</version>
  <description>ROS2 Publisher/Processor demo package</description>
  <maintainer email="your@email.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
</package>
